Users group options added - save/edit/remove